bk_ida/gccida/c0/cpp_post_options
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_post_options/src/cppinit.c:2260:25: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  cpp_post_options( cpp_reader_0 *pfile) 
                        ^~~~~~~~~~~~
                        cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_post_options/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_post_options/src/cppinit.c:2269:25: error: use of undeclared identifier 'arg0'
pfile->opts.in_fname = &arg0; 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_post_options/src/cppinit.c:2271:26: error: use of undeclared identifier 'arg0'
pfile->opts.out_fname = &arg0; 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_post_options/src/cppinit.c:2275:34: error: use of undeclared identifier 'arg0'
pfile->opts.user_label_prefix = &arg0; 
                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_post_options/src/obj/cppinit.o] Error 1
